demo/cards2.css
/* Thanks to
   @donpark on GitHub Scalable CSS Playing Cards
   https://donpark.github.io/scalable-css-playing-cards/ */

   @font-face {
    font-family: 'Suit-Regular';
    src: url("https://bfa.github.io/solitaire-js/fonts/suit-regular.eot");
    src: url("https://bfa.github.io/solitaire-js/fonts/suit-regular.eot?#iefix") format('embedded-opentype'), url("https://bfa.github.io/solitaire-js/fonts/suit-regular.woff") format('woff'), url("https://bfa.github.io/solitaire-js/fonts/suit-regular.ttf") format('truetype'), url("https://bfa.github.io/solitaire-js/fonts/suit-regular.svg#suit-regular") format('svg');
    font-weight: normal;
    font-style: normal;
  }
  html, body {
     width: 100%;
     height: 100%;
  }
  body {
     position: relative;
     color: #f3f5f7;
     background: #0e8b44 url('https://bfa.github.io/solitaire-js/img/green_felt.jpg');
     background-size: cover;
     background-position: center;
  }
  .navbar {
     background: rgba(8,8,8,.75);
  }
  .navbar a {
     color: #fff;
  }
  .navbar li[data-active="false"] {
     opacity: 0.5;
     pointer-events: none;
  }
  .navbar li[data-active="true"] {
     opacity: 1;
     pointer-events: auto;
  }
  .template {
     display: none;
  }
  #score {
     position: relative;
     background: rgba(0,0,0,.15);
     margin-top: 1.5em;
     margin-bottom: 0.5em;
     padding: 1em;
     line-height: 1;
  }
  #score > * {
     display: inline-block;
     min-width: 100px;
  }
  #score > *:last-child {
     float: right;
     text-align: right;
  }
  #score label {
     margin-bottom: 0;
  }
  #score .timer button {
     display: none;
     position: absolute;
     -webkit-appearance: none;
     background: transparent;
     outline: none;
     border: 0;
     padding: 0;
     top: 0;
     left: 0;
     width: 3em;
     height: 100%;
  }
  #score .timer button i {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     font-size: 0;
  }
  #score .timer button i::before {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 0.75em;
     height: 1em;
     margin-left: -0.375em;
     margin-top: -0.5em;
     font-size: 1.5rem;
     content: none;
  }
  #score .timer button i#play::before {
     border-top: 8px solid transparent;
     border-left: 12px solid #fff;
     border-bottom: 8px solid transparent;
  }
  #score .timer button i#pause::before {
     border-right: 4px solid #fff;
     border-left: 4px solid #fff;
  }
  [data-gameplay="active"] #score .timer button,
  [data-gameplay="paused"] #score .timer button {
     display: inline-block;
  }
  [data-gameplay="active"] #score .timer button i#pause::before,
  [data-gameplay="paused"] #score .timer button i#play::before {
     content: '';
  }
  [data-gameplay="active"] #score,
  [data-gameplay="paused"] #score {
     padding-left: 3em;
  }
  #auto-win {
     display: none;
     -webkit-appearance: none;
     outline: none;
     border: 0;
     position: absolute;
     z-index: 1;
     bottom: 0;
     width: 100%;
     background: rgba(0,0,0,.8);
     padding: 1em;
     line-height: 1;
  }
  #table {
     opacity: 0;
     width: 100%;
     padding: 15px 0;
  }
  #table > div {
     position: relative;
     margin-bottom: 10px;
  }
  #table > div:last-child {
     margin-bottom: 0;
  }
  #table > div::after {
     content: '';
     display: table-cell;
     clear: both;
  }
  #table ul {
     display: inline-block;
     padding: 0;
  }
  #table > div > ul {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
  }
  .pile {
     display: block;
     position: relative;
     float: left;
     width: 13%;
     margin-right: 1.5%;
     margin-bottom: 10px;
     padding: 5px;
  }
  .pile:last-child {
     margin-right: 0;
  }
  .pile::after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: 2px dotted rgba(0,0,0,.25);
     border-radius: 5px;
  }
  .card {
     display: block;
     position: absolute;
     top: 0;
     left: 0;
     background-color: #ddd;
     background-image: url('https://bfa.github.io/solitaire-js/img/card_back_bg.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     font-family: 'Suit-Regular', sans-serif;
     font-size: 0.6vw;
     border-radius: 5px;
     z-index: -1;
  }
  .card * {
     pointer-events: none;
  }
  @media screen and (min-width: 768px) {
     .card {
        font-size: 0.325em;
     }
     .pile::after, .card {
        border-radius: 10px;
     }
  }
  @media screen and (min-width: 992px) {
     .card {
        font-size: 0.425em;
     }
  }
  @media screen and (min-width: 1200px) {
     .card {
        font-size: 0.525em;
     }
  }
  .card > div {
     display: none;
  }
  .card.up {
     background-image: url('https://bfa.github.io/solitaire-js/img/card_face_bg.png');
     background-repeat: repeat;
     color: #111;
  }
  .card.up > div {
     display: block;
  }
  .card::before {
     content: '';
     display: block;
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 5px;
  }
  .card[data-selected="true"]::before {
     box-shadow: 0 0 6px 3px #FCDB1A;
  }
  @media screen and (min-width: 768px) {
     .card::before {
        border-radius: 10px;
     }
  }
  .card .suit {
     font-size: 5.8em;
     font-weight: normal;
     width: 0.6896551724137931em;
     height: 0.786206896551724em;
     line-height: 0.786206896551724em;
     position: absolute;
     text-align: center;
  }
  @media screen and (max-width: 767px) {
     .card > div > .suit {
        display: none;
     }
  }
  .card .heart,
  .card .diamond {
     color: #cc0000;
  }
  .card .spade .suit::before { content: '♠' }
  .card .heart .suit::before { content: '♥' }
  .card .diamond .suit::before { content: '♦' }
  .card .club .suit::before { content: '♣' }
/* ... */

